update doc 5.9 and pdf 3.13

--- a/model/B-Systerel/Event_B/SubSet_026_5_9/latex/m3_driver_ack.tex
+++ b/model/B-Systerel/Event_B/SubSet_026_5_9/latex/m3_driver_ack.tex
@@ -125,7 +125,8 @@
                 \ThenAct
                         \begin{description}
                         \nItem{ enter\_deactivated\_brake }{ deactivated\_brake :=  TRUE }
-                        \nItem{ act2 }{ service\_brake\_active :=  FALSE }
+                        \nItemY{ act2 }{ service\_brake\_active :=  FALSE }{  }
+                        \nItem{ act3 }{ driver\_responded\_brake\_ack :=  FALSE }
                         \nItem{ leave\_driver\_acknowledge\_brake }{ driver\_acknowledge\_brake :=  FALSE }
                         \end{description}
                 \EndAct
