--- a/model/B-Systerel/Event_B/SubSet_026_5_9/latex/subset_5_9.tex
+++ b/model/B-Systerel/Event_B/SubSet_026_5_9/latex/subset_5_9.tex
@@ -411,11 +411,17 @@ is reached, the mode of the train is on-sight (\binv{inv6}).
 \input{m4_timeout}
 }
 
+\subsection{Machine 5 - Speed Supervision}
+\label{sec:machine-5-speed}
+
+{\footnotesize
+\input{m5_speed_supervision}
+}
+
 \bibliographystyle{alpha}
 \bibliography{openetcs}
 
 \end{document}
-
 
 %%% Local Variables:
 %%% mode: latex
