restore state machine layout

--- a/model/B-Systerel/Event_B/SubSet_026_5_9/latex/subset_5_9.tex
+++ b/model/B-Systerel/Event_B/SubSet_026_5_9/latex/subset_5_9.tex
@@ -415,7 +415,7 @@ is reached, the mode of the train is on-sight (\binv{inv6}).
 \label{sec:machine-5-speed}
 
 {\footnotesize
-\input{m5_speed_supervision}
+\input{m5_supervise_speed}
 }
 
 \bibliographystyle{alpha}
